<resources>
    <string name="app_name">Tiebreak Tennis Academy</string>
    <string name="facebook_app_id">1923781277823048</string>
    <string name="fb_login_protocol_scheme">fb1923781277823048</string>
    <string name="facebook_client_token">2eac03644b44f414719891efdf916c01</string>
    <string name="copiright1">Copyright (c) </string>
    <string name="copiright2">. All rights reserved.</string>
    <string name="slogan">Keep calm &amp; tennis it !</string>
    <string name="skip">Skip</string>
    <string name="get_started">Let\'s get started</string>
    <string name="coaches">Coaches</string>
    <string name="coaches_description">Consult and select a coach for training and coaching.</string>
    <string name="players">Players</string>
    <string name="players_description">Consult the list of tennis players.</string>
    <string name="court">Courts</string>
    <string name="court_description">Consult and select the list of courts for training and matches.</string>
    <string name="planning">Planning</string>
    <string name="planing_description">Get a flexible schedule according to your availability.</string>
    <string name="title_choix_login">Tiebreak \n Tennis Academy</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="forget_password">Forget password ?</string>
    <string name="title_login">Welcome Back</string>
    <string name="desc_title_login">We missed you ! Login to get started.</string>
    <string name="login">Login</string>
    <string name="hint_email">Enter E-mail Address..</string>
    <string name="hint_password">Enter Password..</string>
    <string name="remember_me_hint">Remembrer me</string>
    <string name="help">Need Help ?</string>
    <string name="login_with">Or sign in with</string>
    <string name="title_help">Help Screen</string>
    <string name="desc_help">Everything you need to know is here ! so welcome home.</string>
    <string name="title_login_item">Help for Sign In</string>
    <string name="desc_login_item">If you have an account, you must enter the email and password to log in.</string>
    <string name="title_signup_item">Help for Sign Up</string>
    <string name="desc_signup_item">If you want to create an account, you have to follow a whole procedure.</string>
    <string name="title_forget_item">Help for Forget</string>
    <string name="desc_forget_item">If you want to get access to your account, you have to follow a whole procedure.</string>
    <string name="desc_title_signup">Create a new account to get started.</string>
    <string name="hint_name">Enter Fullname..</string>
    <string name="hint_sexe">Select Gender..</string>
    <string name="welcome_text">Welcome</string>
    <string name="signup_with">Or sign up with</string>
    <string-array name="gender_items">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="next">Next</string>
    <string name="hint_repeat_password">Repeat Password..</string>
    <string name="hint_naissance">Enter Date of Birth..</string>
    <string name="hint_size">Enter Height(cm)..</string>
    <string name="hint_poid">Enter Weight(kg)..</string>
    <string name="forget_title">Forget \n Password</string>
    <string name="desc_forget_password">Provide your accounts email for which you want to reset your password.</string>
    <string name="code">Co \n De </string>
    <string name="verification">Verification</string>
    <string name="text_forget">Enter the security code received (the number of entries is limited).</string>
    <string name="code_hint">*</string>
    <string name="edit_password">New \n Credentials</string>
    <string name="desc_edit_password">Your identity has been verified.\n Set your new password now.</string>
    <string name="get_account">Get your account</string>
    <string name="title_password_updated">Password \n Updated</string>
    <string name="success_updated_password">Your password has been updated successfully !</string>
    <string name="title_account_created">Account \n created</string>
    <string name="success_created_account">Congratulations, your new account has been successfully created. You are now registered with Tiebreak Tennis Academy. You will receive a confirmation email for your new account.</string>
    <string name="not_return">You cannot return to the previous screen !</string>
    <string name="not_available">This functionality is invalid !</string>
    <string name="email_required">The email address is required !</string>
    <string name="password_required">The password is required !</string>
    <string name="email_format_invalid">The format of the email address is invalid !</string>
    <string name="password_minisucle">The password must contain at least one lowercase letter !</string>
    <string name="password_majuscule">The password must contain at least one uppercase letter !</string>
    <string name="password_number">The password must contain at least one number !</string>
    <string name="password_length">The password length must be 5 or more !</string>
    <string name="username_required">The fullname is required !</string>
    <string name="gender_required">The gender is required !</string>
    <string name="username_letter">The fullname must contain letters only !</string>
    <string name="password_not_equals">The passwords are not the same !</string>
    <string name="naissance_required">The date is required !</string>
    <string name="taille_required">The height is required !</string>
    <string name="poid_required">The weight is required !</string>
    <string name="taille_number">The height must contain numbers only !</string>
    <string name="poid_number">The weight must contain numbers only !</string>
    <string name="code_required">The security code is required !</string>
    <string name="code_number">The security code must contain numbers only !</string>
    <string name="signup_facebook">Sign Up with Facebook</string>
    <string name="desc_signup_facebook">You have chosen to register with your facebook account.</string>
    <string name="hint_name_reseaux">Fullname..</string>
    <string name="hint_email_reseaux">E-mail Address..</string>
    <string name="hint_password_reseaux">Password..</string>
    <string name="hint_gender_reseaux">Gender..</string>
    <string name="hint_naissance_reseaux">Date..</string>
    <string name="hint_size_reseaux">Height(cm)..</string>
    <string name="hint_poid_reseaux">Weight(kg)..</string>
    <string name="signup_google">Sign Up with Google</string>
    <string name="desc_signup_google">You have chosen to register with your google account.</string>
    <string name="erreur_facebook">Sign Up error</string>
    <string name="desc_erreur_facebook">For technical reasons, you cannot use authentication with Facebook at the moment. Please try again later.</string>
    <string name="understand">I Understand</string>
    <string name="desc_erreur_google">For technical reasons, you cannot use authentication with Google at the moment. Please try again later.</string>
    <string name="wait">Please wait..</string>
    <string name="email_exist">Sorry ! There is another account created with this email address. Please choose another email address and try again.</string>
    <string name="registration">Registration in progress..</string>
    <string name="error_signup">For technical reasons, you cannot create a new account at the moment. Please try again later.</string>
    <string name="signin_progress">Login in progress..</string>
    <string name="no_account_found">There is no account created with this email address.</string>
    <string name="wrong_password">The password is not entered correctly !</string>
    <string name="hint_phoone">Enter phone number..</string>
    <string name="phone_required">The phone number is required !</string>
    <string name="phone_number">The phone number must contain numbers only !</string>
    <string name="phone_length">The phone number length must be 8 !</string>
    <string name="phone_exist">Sorry ! There is another account created with this phone number. Please choose another phone number and try again.</string>
    <string name="hint_phone_reseaux">Phone number..</string>
    <string name="error_forget">For technical reasons, you cannot get your account at the moment. Please try again later.</string>
    <string name="error_code">The security code entered was invalid. Please check the code received on the phone and try again.</string>
    <string name="account_getted">Account recovered</string>
    <string name="signin_error">Sign In error</string>
    <string name="forget_password_error">Forget Password error</string>
    <string name="account_getted_desc">Well done ! you have successfully recovered your account. Now you need to change your password for account security.</string>
    <string name="forget_not_available">For technical reasons, this functionality is invalid. Please try again later.</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="help2">Help</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="desc_logout">If you have confirmed, your account will be closed automatically.</string>
    <string name="title_logout">Are you sure ?</string>
    <string name="logout_progress">Logout in progress..</string>
    <string name="getting_progress">Getting account in progress..</string>
    <string name="verification_progress">Verification security code in progress..</string>
    <string name="verification_phone_progress">Verification phone number in progress..</string>
    <string name="verification_email_progress">Verification email address in progress..</string>
    <string name="desc_home">Make your reservations online and let your dreams come true.</string>
    <string name="courses_booking">Courses booking</string>
    <string name="accepte_condition">I have read and unreservedly accept the <b>General Conditions</b> of Tiebreaker Tennis Academy.</string>
    <string name="title_general_conditions">General conditions</string>
    <string name="confirm">Confirm</string>
    <string name="other">Other</string>
    <string name="profil">Profile</string>
    <string name="my_profil">My profile</string>
    <string name="edit_profil">Edit profile</string>
    <string name="courts">Courts</string>
    <string name="show_coaches">List of coaches</string>
    <string name="show_courts">List of courts</string>
    <string name="show_players">List of players</string>
    <string name="add_courses">Book a course</string>
    <string name="parametres">Setings</string>
    <string name="menu">Menu</string>
    <string name="voir_profil">Show my profile</string>
    <string name="my">My</string>
    <string name="fullname">Name of person</string>
    <string name="email">Email of person</string>
    <string name="mobile">Number of person</string>
    <string name="genre">Gender of person</string>
    <string name="naissance">Date of birth of person</string>
    <string name="taille">Height of person</string>
    <string name="poid">Weight of person</string>
    <string name="second_informations">Add informations</string>
    <string name="photo_profil">Profile picture</string>
    <string name="desc_title_image_profil">Please upload a profile picture and be visible to others.</string>
    <string name="update">Upload</string>
    <string name="update2">Update</string>
    <string name="whatsup">Add whatsapp number</string>
    <string name="desc_whatsapp">Please enter your whatsapp number if you want others to find you easily.</string>
    <string name="whatsapp_hint">Enter the Whatsapp Number..</string>
    <string name="about">About</string>
    <string name="title_book_court">Book a court</string>
    <string name="list_reservation">List of reservations</string>
</resources>