<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/profil">
        <menu>
            <item
                android:id="@+id/my_profil"
                android:title="@string/profil"
                android:icon="@drawable/account"
                android:iconTint="@color/black_light" />

            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/exit"
                android:iconTint="@color/black_light" />
        </menu>
    </item>

    <item android:title="@string/coaches">
        <menu>
            <item
                android:id="@+id/my_coaches_res"
                android:title="@string/show_coaches"
                android:icon="@drawable/list"
                android:iconTint="@color/black_light" />
        </menu>
    </item>

    <item android:title="@string/courts">
        <menu>
            <item
                android:id="@+id/list_courts"
                android:title="@string/show_courts"
                android:icon="@drawable/list"
                android:iconTint="@color/black_light" />

            <item
                android:id="@+id/list_booking"
                android:title="@string/list_reservation"
                android:icon="@drawable/list"
                android:iconTint="@color/black_light" />

            <item
                android:id="@+id/book_court"
                android:title="@string/title_book_court"
                android:icon="@drawable/tennis_court_booking"
                android:iconTint="@color/black_light" />
        </menu>
    </item>

    <item android:title="@string/players">
        <menu>
            <item
                android:id="@+id/my_players_res"
                android:title="@string/show_players"
                android:icon="@drawable/list"
                android:iconTint="@color/black_light" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/help"
                android:title="@string/help2"
                android:icon="@drawable/help"
                android:iconTint="@color/black_light" />

            <item
                android:id="@+id/support"
                android:title="@string/about"
                android:icon="@drawable/propos"
                android:iconTint="@color/black_light" />
        </menu>
    </item>
</menu>