<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/photo_profil"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_light"
        android:textSize="15sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/desc_title_image_profil"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profil"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:civ_border_color="@color/navigation_item"
        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/navigation_item_text"
        android:background="@drawable/background_disabled_button"
        android:text="@string/update"
        android:textAllCaps="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profil" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/navigation_item_text"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/update_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profil" />

</androidx.constraintlayout.widget.ConstraintLayout>