<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".Activities.ChoixLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/players"
            android:layout_width="wrap_content"
            android:layout_height="430dp"
            android:src="@drawable/court"
            app:layout_constraintBottom_toTopOf="@id/title_choix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_choix_login"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/players"
            app:layout_constraintBottom_toTopOf="@id/text_choix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="18sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/linear_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/forget_password">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:clickable="true"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:clickable="true"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="17sp"
            android:background="@color/white"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@id/linear_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>